test/compile-fail/parse/urandom/top.rhdl
p}/ry$l/5 ,I{Ͱ4p/*~zv,sU7+wE&.ͤv+1ݭnwsދXm1C:%.^`	MJe
